--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -17,6 +17,7 @@ finish# See https://help.github.com/articles/ignoring-files/ for more about igno
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
